--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,700&family=Roboto&display=swap");
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
+  color: #3c4043;
   margin: 0;
   padding: 0;
   background-color: #131313;
@@ -18,9 +19,9 @@ body {
 
 .header {
   text-align: center;
-  background-color: #f0f0f0;
-  padding: 20px;
-  border-radius: 5px 5px 0 0;
+  background-color: #f5f2ec;
+  padding: 40px;
+  border-radius: 15px;
 }
 
 .profsumm {
@@ -40,12 +41,16 @@ body {
 
 .section {
   margin-top: 20px;
+  padding: 40px;
+  background-color: #f5f2ec;
+  border-radius: 15px;
 }
 
 .section-title {
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .section-content {
@@ -58,14 +63,15 @@ body {
 }
 
 .skills {
-  margin-top: 20px;
+  padding: 10px;
+  background-color: #f8f9fa;
 }
 
 .skills-list {
   list-style-type: none;
   padding: 0;
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .skills-list-item {
@@ -80,4 +86,15 @@ body {
 .link {
   text-decoration: none;
   color: #007bff;
+}
+
+.personal-projects-title {
+  background-color: #e3edf7;
+  text-align: center;
+  border-radius: 15px;
+}
+
+.container {
+  display: flex;
+  column-gap: 20px;
 }
